Fix Z-index footer

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,8 +7,10 @@
       position: fixed;
       bottom: 0;
       width: calc(100% - 5%); /* Para mantener márgenes laterales */
-    margin: 0 auto; /* Centra el footer horizontalmente */
+      margin: 0 auto; /* Centra el footer horizontalmente */
       box-shadow: 0 -2px 5px rgba(0,0,0,0.2);
+      z-index: 10;
+
 }
 .text {
       margin: 0;
